# owi-metadatabase-results-sdk

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  GitVersion.yml  README.md  TODO.md  index.html  invoke.yaml  mkdocs.yml  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/scripts/: release_version.py
.github/workflows/: README.md  docs.yml  release-on-merge.yml
0.1.1/: objects.inv
0.1.1/explanation/data-model/: index.html
0.1.1/explanation/namespace-packages/: index.html
0.1.1/how-to/query-results/: index.html
0.1.1/how-to/upload-results/: index.html
0.1.1/tutorials/first-query/: index.html
0.1.1/tutorials/lifetime-design-frequencies/: index.html
0.1.2/: objects.inv  search.json
0.1.2/about/authors/: index.html
0.1.2/about/license/: index.html
0.1.2/development/contributing/: index.html
0.1.2/explanation/: index.html
0.1.2/how-to/authenticate/: index.html
0.1.2/how-to/filter-data/: index.html
0.1.2/how-to/upload-results/: index.html
0.1.2/tutorials/: index.html
0.1.2/tutorials/lifetime-design-frequencies/: index.html
0.2.0/: objects.inv  search.json
0.2.0/about/license/: index.html
0.2.0/development/release/: index.html
0.2.0/explanation/architecture/: index.html
0.2.0/how-to/plot-results/: index.html
0.2.0/tutorials/lifetime-design-frequencies/: index.html
0.2.0/tutorials/lifetime-design-verification/: index.html
0.2.4/: search.json
0.2.4/tutorials/lifetime-design-verification/: index.html
0.2.4/tutorials/wind-speed-histogram/: index.html
0.2.5/: search.json
0.2.5/tutorials/ceit-corrosion-monitoring/: index.html
0.2.6/: search.json
0.2.6/development/contributing/: index.html
0.2.6/explanation/architecture/: index.html
0.2.6/explanation/data-model/: index.html
0.2.6/how-to/plot-results/: index.html
0.2.6/reference/: index.html
0.2.7/: objects.inv  search.json
0.2.7/explanation/: index.html
0.2.7/explanation/architecture/: index.html
0.2.7/how-to/plot-results/: index.html
0.2.8/: index.html  objects.inv  search.json  sitemap.xml
0.2.8/tutorials/: index.html
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/how-to/: index.html
dev/reference/: index.html
docs/: index.md
docs/about/: authors.md  changelog.md  license.md
docs/api/: index.md
docs/development/: contributing.md  release.md  testing.md
docs/explanation/: architecture.md  data-model.md  index.md  namespace-packages.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: authenticate.md  filter-data.md  index.md  install.md  plot-results.md  query-results.md  upload-results.md
docs/reference/: index.md
docs/tutorials/: ceit-corrosion-monitoring.md  first-query.md  index.md  lifetime-design-frequencies.md  lifetime-design-verification.md  wind-speed-histogram.md
scripts/: 1.0.lifetime-design-frequencies.ipynb  1.1.upload_results_example_data.ipynb  1.2.plot_analyses_and_results.ipynb  2.0.lifetime-design-verification.ipynb  3.0.wind-speed-histogram.ipynb  4.0.ceit-corrosion-monitoring.ipynb  4.1.ceit-corrosion-monitoring-simplified.ipynb  README.md  notebook_results_demo.ipynb  notebook_results_demo.py  plot_analyses_and_results.ipynb  upload_results_example_data.ipynb  upload_results_example_data.py
scripts/data/: .~lock.results-example-data.xlsx#  MeasFile_24sea.json  results-example-data.xlsx
tasks/: colors.py  docs.py  performance.py  quality.py  system.py  test.py
tests/: conftest.py  test_imports.py  test_release_version.py
tests/results/: test_ceit.py  test_endpoints.py  test_frequency_plots.py  test_frequency_verification_plots.py  test_io.py  test_models.py  test_plot_registry.py  test_plotting.py  test_registry.py  test_serializers.py  test_services.py  test_utils.py  test_verification_plots.py
(+100 files in other folders)
